Update NavMobile, fix OverflowX

--- a/sass/mixin.scss
+++ b/sass/mixin.scss
@@ -51,13 +51,10 @@
         animation: moveno#{$name} 2s forwards;
     }
 }
-
 @mixin Draw2cicle($mess) {
     @media (max-width: 1023px) {  
         padding: 80px 0px;   
     }
-    padding-left: 140px;
-    padding-right: 140px;
     padding: 80px 140px 0px 140px;
     text-align: center;
     background-color:#ffffffff;
@@ -147,7 +144,7 @@
             z-index: 1;
             position: absolute;
             left: 47.7%;
-            bottom: -40px;
+            bottom: -39px;
             content: "";
             width: 0;
             height: 0;
@@ -162,4 +159,15 @@
             }
         }
     }
+}
+
+@mixin NavLinkStyle(){
+    line-height: 50px;
+    padding-bottom: 20px;
+    &:hover{
+        color:$main-bright;
+        border-bottom: 2px solid $main-bright;
+    }
+    text-decoration: none;
+    @include fontface($font-heading,18px,$main-dark,400);
 }
